--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,19 @@
 # ignore
-
 # eclipse project file
 .setting/
 .classpath
 .project
-bin/
+**/target/
+*.class
+*.war
+**/.classpath
+**/.project
+**/.setting
+**/bin/**
+**/out/**
+**/out/
+/build/
+/bin/
+.idea/
+.iml
+wrapper/
